# chunkiter

./: .buildinfo  .bumpversion.toml  .gitignore  .gitlab-ci.yml  README.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: docs.yml
_sources/: index.rst.txt
chunkiter/: __init__.py  functions.py  tools.py
docs/source/: api.rst  conf.py  index.rst
scripts/: increase_version.sh
src/chunkiter/: __init__.py  functions.py  tools.py  version.py
src/chunkiter/oaconvolve/: __init__.py  conv.tex  conv_notes.md
src/chunkiter/sliding_window/: __init__.py
src/chunkiter/upfirdn/: __init__.py
