[project]
name = "chunkiter"
authors = [
  { name="Leberwurscht", email="leberwurscht@hoegners.de" },
]
description = "A simple approach and library for doing numpy computations with larger-than-memory data."
dependencies = [
  "numpy",
  "tables",
]
version = "0.0.31" #MARKER#bump-my-version
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://gitlab.com/leberwurscht/chunkiter"
